# Email-Platform-Tool

./: .dockerignore  .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml  vercel.json
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements-vercel.txt  requirements.txt
backend/accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
backend/campaigns/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/config/: asgi.py  celery.py  urls.py  wsgi.py
backend/core/: encryption.py  exceptions.py  responses.py
backend/docker/: entrypoint.sh  gunicorn.conf.py
backend/domains/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/email_templates/: apps.py  models.py  serializers.py  urls.py  views.py
backend/inbox/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/reports/: serializers.py  services.py  urls.py  views.py
backend/sending/: apps.py  models.py  queue_control.py  services.py  tasks.py
backend/settings_app/: apps.py
backend/smtp_servers/: apps.py  connection.py  imap_sent.py  import_services.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/subscribers/: admin.py  apps.py  models.py  permissions.py  reacher.py  serializers.py  services.py  urls.py  validators.py  views.py
backend/tracking/: apps.py  context.py  models.py  pytracking_config.py  tokens.py  (+5 more)
(+140 files in other folders)
